--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "4.6",
+    "font-awesome": "^4.7.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
